feat(pagination): tamed the excuses into bite-sized chunks for sanity’s sake 📖🔗🔥
- Controller and Service now handle paginated excuses like a pro—no more drowning in a sea of excuses. 🌊✋
- Repository got a shiny new pagination logic upgrade because why not? 🛠️✨
- ControllerTests and ServiceTests ensure excuses don’t overflow or vanish. 🧪🔍
- Perfect for those who prefer their excuses served 20 at a time. 😎🍽️